[server, client] bug fixes